--- a/HelloWorld/HelloWorld.csproj
+++ b/HelloWorld/HelloWorld.csproj
@@ -7,4 +7,9 @@
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Octopus.OpenFeature" Version="0.0.15" />
+      <PackageReference Include="OpenFeature" Version="1.5.1" />
+    </ItemGroup>
+
 </Project>
