--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -38,6 +38,23 @@ jobs:
           docker build ${{ github.workspace }}/HelloWorld -t featuretoggleshelloworld.azurecr.io/feature-toggles-hello-world:${{ github.sha }}
           docker push featuretoggleshelloworld.azurecr.io/feature-toggles-hello-world:${{ github.sha }}
 
+      - name: Login to Octopus Deploy
+        uses: OctopusDeploy/login@v1
+        with: 
+          server: https://main.testoctopus.app
+          service_account_id: 09117e10-fb45-4a8a-98e9-282e8e73a633
+
+      - name: Create a release in Octopus Deploy 🐙
+        uses: OctopusDeploy/create-release-action@v3
+        with:
+          space: 'MichRich'
+          project: 'Feature Toggles Hello World'
+          packages: | 
+            feature-toggles-hello-world:${{ github.sha }}
+
+          
+        
+
       
 
 
