inject client id

--- a/HelloWorld/appsettings.json
+++ b/HelloWorld/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "FeatureToggles": {
-    "ClientId": ""
+    "ClientId": "#{Octopus.FeatureToggles.ClientIdentifier}"
   }
 }
