--- a/HelloWorld/HelloWorld.csproj
+++ b/HelloWorld/HelloWorld.csproj
@@ -8,8 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Octopus.OpenFeature" Version="0.0.15" />
-      <PackageReference Include="OpenFeature" Version="1.5.1" />
+      <PackageReference Include="Octopus.OpenFeature" Version="1.1.0" />
+      <PackageReference Include="OpenFeature" Version="2.3.1" />
+      <PackageReference Include="OpenFeature.Contrib.Providers.EnvVar" Version="0.0.2" />
     </ItemGroup>
 
 </Project>
