--- a/HelloWorld/Properties/launchSettings.json
+++ b/HelloWorld/Properties/launchSettings.json
@@ -15,7 +15,8 @@
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5204",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "FeatureToggle_localization": false 
       }
     },
     "https": {
