--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -21,37 +21,15 @@ jobs:
       - name: Checkout to the branch
         uses: actions/checkout@v2
 
-      - name: Azure Login
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.FEATURETOGGLESHELLOWORLD_AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.FEATURETOGGLESHELLOWORLD_AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.FEATURETOGGLESHELLOWORLD_AZURE_SUBSCRIPTION_ID }}
+      - name: 'Login to GitHub Container Registry'
+            uses: docker/login-action@v1
+            with:
+              registry: ghcr.io
+              username: ${{github.actor}}
+              password: ${{secrets.GITHUB_TOKEN}}
 
-      - name: 'Build and push image'
-        uses: azure/docker-login@v1
-        with:
-            login-server: featuretoggleshelloworld.azurecr.io
-            username:  ${{ secrets.FEATURETOGGLESHELLOWORLD_REGISTRY_USERNAME }}
-            password: ${{ secrets.FEATURETOGGLESHELLOWORLD_REGISTRY_PASSWORD }}  
-      - run: |
-          docker build ${{ github.workspace }}/HelloWorld -t featuretoggleshelloworld.azurecr.io/feature-toggles-hello-world:${{ github.sha }}
-          docker push featuretoggleshelloworld.azurecr.io/feature-toggles-hello-world:${{ github.sha }}
 
-      - name: Login to Octopus Deploy
-        uses: OctopusDeploy/login@v1
-        with: 
-          server: https://main.testoctopus.app
-          service_account_id: 09117e10-fb45-4a8a-98e9-282e8e73a633
-
-      - name: Create a release in Octopus Deploy 🐙
-        uses: OctopusDeploy/create-release-action@v3
-        with:
-          space: 'MichRich'
-          project: 'Feature Toggles Hello World'
-          packages: | 
-            feature-toggles-hello-world:${{ github.sha }}
-
+     
           
         
 
