added kubecon sample branch to trigger

--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -5,7 +5,7 @@ on:
   # Automatically trigger it when detected changes in repo
   push:
     branches: 
-      [ main, localization ]
+      [ main, kubecon-sample ]
       
   # Allow manual trigger 
   workflow_dispatch:      
