--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -21,12 +21,17 @@ jobs:
       - name: Checkout to the branch
         uses: actions/checkout@v2
         
-      - name: 'Login to GitHub Container Registry'
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{github.actor}}
           password: ${{secrets.GITHUB_TOKEN}}
+
+      - name: Build and push image
+        run: |
+        docker build ${{ github.workspace }}/HelloWorld -t ghcr.io/octopusdeploy/feature-toggles-hello-world:${{ github.sha }}
+        docker push ghcr.io/octopusdeploy/feature-toggles-hello-world:${{ github.sha }}
 
 
      
