--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -12,6 +12,7 @@ on:
 
 jobs:
   build-and-deploy:
+    permissions: write-all
     runs-on: ubuntu-latest
     permissions: 
       id-token: write #This is required for requesting the OIDC JWT Token
