create release from azure image

--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -48,7 +48,7 @@ jobs:
           space: 'Pattern - Feature Toggles'
           project: 'Hello World (with Feature Toggles)'
           packages: | 
-            feature-toggles-hello-world:${{ github.sha }}
+            helloworld:${{ github.sha }}
 
 
      
