--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -5,7 +5,7 @@ on:
   # Automatically trigger it when detected changes in repo
   push:
     branches: 
-      [ main, kubecon-sample ]
+      [ main ]
       
   # Allow manual trigger 
   workflow_dispatch:      
@@ -18,13 +18,6 @@ jobs:
     steps:
       - name: Checkout to the branch
         uses: actions/checkout@v2
-        
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{github.actor}}
-          password: ${{secrets.GITHUB_TOKEN}}
 
       - name: Build and push image
         uses: azure/docker-login@v1
