Move setting license-type segment to program.cs

--- a/HelloWorld/Properties/launchSettings.json
+++ b/HelloWorld/Properties/launchSettings.json
@@ -17,7 +17,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "FeatureToggle_localization": false,
-        "FeatureToggle_dark-mode": false
+        "FeatureToggle_dark-mode": true
       }
     },
     "https": {
